test/invalid/interface_unfinished.d
//T error: interface_unfinished.d:4:13:
//T error: expected CloseBrace, not the end of the file.

interface I {
